--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <div class="section-content">
                     <div>
                         <div class="text">الاسم</div>
-                        <div class="last">شركة الرمال الفاخرة <br> التجارية  </div>
+                        <div class="last">   <br>   </div>
                     </div>
                     <div>
                         <div class="text">رقم هوية المنشأة</div>
-                        <div class="last">   <span class="date">7034912</span>878</div>
+                        <div class="last">   <span class="date"></span></div>
                     </div>
                     <div>
                         <div class="text"></div>
@@ -70,15 +70,15 @@
                     </div>
                     <div>
                         <div class="text">  هوية السائق </div>
-                        <div class="last"> <span class="start">2412097</span>830</div>
+                        <div class="last"> <span class="start"></span>830</div>
                     </div>
                     <div>
                         <div  class="text">الاسم الأول</div>
-                        <div class="last">سيد</div>
+                        <div class="last"></div>
                     </div>
                     <div>
                         <div class="text">اسم  العائلة</div>
-                        <div class="last">علي</div>
+                        <div class="last"></div>
                     </div>
                     <div>
                     <div class="text">تاريخ إصدار البطاقة</div>
